chore: add packages/shared, packages/llama_cpp_dart, packages/archiveme_research
